objects/Annuity_Policy__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annuity Policies</relationshipLabel>
        <relationshipName>Annuity_Policies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Annuity_Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annuity Issuer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Annuity Issuer record type must be &apos;Specialty Finance - Insurance Companies&apos; and the Annuity Issuer Type value can not be &apos;Owner&apos;</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Specialty Finance - Insurance Companies</value>
            </filterItems>
            <filterItems>
                <field>Account.Type_InsuranceCo__c</field>
                <operation>notEqual</operation>
                <value>Owner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annuity Policies (Annuity Issuer)</relationshipLabel>
        <relationshipName>Annuity_Policies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annuity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annuity Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Annuity Owner record type must be &apos;Specialty Finance - Insurance Companies&apos; and the Annuity Owner Type value can not be &apos;Issuer&apos;</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Specialty Finance - Insurance Companies</value>
            </filterItems>
            <filterItems>
                <field>Account.Type_InsuranceCo__c</field>
                <operation>notEqual</operation>
                <value>Issuer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annuity Policies (Annuity Owner)</relationshipLabel>
        <relationshipName>Annuity_Policies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Annuitant_or_Beneficiary__c</fullName>
        <label>Original Annuitant or Beneficiary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original Annuitant</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Annuity Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Annuity Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annuity Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>